# mavros_flex_control

./: .gitignore  .gitmodules
script/: relay.sh  setup.sh
src/flex_sensor_reader/: CMakeLists.txt  package.xml  requirements.txt
src/flex_sensor_reader/flex_sensor_reader/: flex_process.py  flex_sensor_node.py
src/flex_sensor_reader/launch/: flex_sensors.launch.py
src/flex_sensor_reader/msg/: FlexSensorData.msg
src/px4_offboard_control/: package.xml  setup.py
src/px4_offboard_control/launch/: flex_control.launch.py  mavros.launch.py  position.launch.py
src/px4_offboard_control/px4_offboard_control/: circle.py  fake_flex_sensor.py  offboard_control.py  visualiser.py
src/sensors/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sensors/flex_sensor_reader/: debug_node.py  flex_process.py  flex_sensor_node.py
src/sensors/launch/: flex_sensors.launch.py
src/sensors/msg/: FlexSensorData.msg
src/vicon_to_mavros/: package.xml  setup.cfg  setup.py
src/vicon_to_mavros/launch/: vicon_mavros_relay.launch.py
src/vicon_to_mavros/vicon_to_mavros/: relay_cov_node.py  relay_node.py
